test/should-fail/初始化常量.j
globals
    constant integer a
endglobals